[package]
name = "kheprimaat"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Livey <ind4skylivey@proton.me>"]
description = "KhepriMaat: evidence-first bug bounty automation (lab-focused, proprietary)"
repository = "git@github.com:ind4skylivey/kheprimaat.git"
license-file = "LICENSE.txt"
keywords = ["security", "bug-bounty", "automation", "recon", "vulnerability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI & Async
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }

# Database
# Enable AnyPool with SQLite/Postgres support; "any" requires explicit drivers enabled.
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "any", "sqlite", "postgres", "macros", "uuid", "chrono"] }

# HTTP & Network
reqwest = { version = "0.11", features = ["json", "cookies", "stream"] }
hyper = { version = "0.14", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# UUID & Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Templates & Reporting
handlebars = "4.5"
askama = "0.12"

# Utilities
regex = "1.10"
lazy_static = "1.4"
colored = "2.1"
indicatif = "0.17"
futures = "0.3"
csv = "1.3"
base64 = "0.22"
url = "2.5"
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
libc = "0.2"
windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }
axum = { version = "0.7", default-features = false, features = ["macros", "json", "tokio", "http1", "query"] }
tower = { version = "0.4", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls", "tracing"] }

# Scheduling (Issue #11)
cron = "0.12"
chrono-tz = "0.9"

# Priority Queue (Issue #10)
# Using std::collections::BinaryHeap - no additional deps needed

# Testing
mockall = "0.12"
tempfile = "3.8"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
redis = []

[[bin]]
name = "kheprimaat"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
